# python-project-50

./: .gitignore  README.md  gendiff  pyproject.toml  todo.md
.github/workflows/: python-app.yml
gendiff_prog/: Makefile  diff_of_files.py  gendiff.py  parse.py
gendiff_prog/scripts/: gendiff.py  parse.py
gendiff_prog/tests/: test_simple.py
hexlet_code/scripts/: diff_of_files.py  difference_files.py  gendiff.py  read_files.py
hexlet_code/src/: gendiff.py
hexlet_code/src/scripts/: __init__.py  diff_of_files.py  gendiff.py
hexlet_code/src/tests/: test_simple.py
hexlet_code/tests/: test_json.py
tests/: test_simple.py
