[project]
name = "python-project-50"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
[project.scripts]
gendiff = "hexlet_code.scripts.gendiff:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=xml --cov-report=html --junit-xml=test-results.xml"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/test_*"]
